--- a/atividade_03/src/main/resources/application.properties
+++ b/atividade_03/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyDialect
 spring.datasource.driverClassName=org.apache.derby.jdbc.EmbeddedDriver
 spring.datasource.username=root
-spring.datasource.url=jdbc:derby:db183263;create=true
+spring.datasource.url=jdbc:derby:183263;create=true
 spring.jpa.hibernate.ddl-auto=update
